--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,16 @@
 
         <activity android:name=".MainActivity" />
 
-        <activity android:name=".AddActivity"/>
-
-        <activity android:name=".ItemActivity">
+        <activity android:name=".AddActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".ItemActivity">
+
         </activity>
     </application>
 
