--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity">
 
-        <activity android:name=".AddActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,9 +19,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ItemActivity">
+        <activity android:name=".AddActivity"/>
 
-        </activity>
     </application>
 
 </manifest>
