--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+           android:label="@string/main_title">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +24,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".AddActivity"/>
+        <activity android:name=".AddActivity" android:theme="@style/ActivityAddStyle"/>
 
     </application>
 
